# makimaki

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml  nginx.conf
.github/workflows/: claude-fix.yml  deploy.yml
line-stamps/: character-guide.md
src/: main.rs
static/: _docs.html  admin.html  anime.html  box.html  guide.html  index.html  lyrics.txt  manifest-order.json  manifest.json  mv.html  order.html  pos.html
static/anime/: index.html
static/maki-chan/: gallery.html  index.html  select.html
static/stamps/: animated.html  index.html
static/stamps/animated/: 01.apng  01.webm  02.apng  02.webm  03.apng  03.webm  04.apng  04.webm  05.apng  05.webm  06.apng  06.webm  07.apng  07.webm  08.apng  08.webm  09.apng  09.webm  10.apng  10.webm  11.apng  11.webm  12.apng  12.webm  13.apng  13.webm  14.apng  14.webm  16.apng  16.webm
tasks/: todo.md
